--- a/style.css
+++ b/style.css
@@ -1,38 +1,166 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.root {
-    /* Primary colors*/
-    --Very-Dark-Magenta: hsl(300, 43%, 22%);
-    --Soft-Pink: hsl(333, 80%, 67%);
+:root {
+  /* Primary colors*/
+  --Very-Dark-Magenta: hsl(300, 43%, 22%);
+  --Soft-Pink: hsl(333, 80%, 67%);
 
-    /* Neutral colors*/
-    --Dark-Grayish-Magenta: hsl(303, 10%, 53%);
-    --Light-Grayish-Magenta: hsl(300, 24%, 96%);
-    --White: hsl(0, 0%, 100%);
-
-
+  /* Neutral colors*/
+  --Dark-Grayish-Magenta: hsl(303, 10%, 53%);
+  --Light-Grayish-Magenta: hsl(300, 24%, 96%);
+  --White: hsl(0, 0%, 100%);
 }
 
 body {
-    min-height: 100vh;
-    font-size: 15px;
-    font-family: 'League Spartan', sans-serif;
+  min-height: 100vh;
+  font-size: 15px;
+  font-family: "League Spartan", sans-serif;
+  background-image: url('./images/bg-pattern-top-desktop.svg'),
+  url('./images/bg-pattern-bottom-desktop.svg');
+  background-position: left top, right bottom;
+  background-repeat: no-repeat, no-repeat;
+  background-size: 40vw 45vh, 75vw 85vh;
 }
 
 main {
-    min-height: 95vh;
-    display: grid;
+  min-height: 95vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.container {
+  width: 80vw;
+  min-height: 80vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 10px;
+}
 
+.article1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
+.article1 > h1 {
+  font-size:3em;
+  font-weight:700;
+  color: var(--Very-Dark-Magenta);
+}
 
+.article1 > p {
+  width: 70%;
+  margin-top: 1em;
+  font-size:1.1em;
+  font-weight:400;
+  line-height: 1.3;
+  color: var(--Very-Dark-Magenta);
+}
 
+.article2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
+.ratings {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  padding: 0.9em 1em;
+  margin: 0.5em 0;
+  border-radius: 7px;
+  background-color: var(--Light-Grayish-Magenta);
+  font-size: 1.1em;
+  font-weight: 700;
+}
 
+.stars {
+  width: 30%;
+  padding-left: 0.5em;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.ratings img {
+  height: 1.1em;
+  object-fit: contain;
+}
+
+.rating_description {
+
+  margin-left: 1em;
+  display: flex;
+  align-items: center;
+  color: var(--Very-Dark-Magenta);
+}
+
+.r1 {
+  align-self: flex-start;
+}
+
+.r2 {
+  align-self: center;
+}
+
+.r3 {
+  align-self: flex-end;
+}
+
+.article3 {
+  grid-column: span 2;
+}
+
+@media screen and (max-width:375px) {
+
+  body {
+    width: 100%;
+    min-height: 100vh;
+    font-size: 15px;
+    font-family: "League Spartan", sans-serif;
+    background-image: url('./images/bg-pattern-top-mobile.svg'),
+    url('./images/bg-pattern-bottom-mobile.svg');
+    background-position: left top, right bottom;
+    background-repeat: no-repeat, no-repeat;
+    background-size: 90vw 20vh, 100vw 40vh;
+  }
+
+  main {
+    min-height: 95vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .container {
+    width: 80vw;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+
+  .article3 {
+    grid-column: auto;
+  }
+}
+
+/* main {
+  min-height: 95vh;
+  display: grid;
+  grid-template-columns: repeat(autofit, minmax(50vw,1fr));
+  grid-template-columns: repeat(autofit, minmax(50vh,1fr));
+}
+
+.article3 {
+  grid-row: span 2/auto;
+} */
 
 
 
