--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 0.5em 2em;
+  gap: 4em 2em;
 }
 
 .article1 {
@@ -49,17 +49,17 @@ main {
 }
 
 .article1 > h1 {
-  font-size: 3em;
+  font-size: 3.5em;
   font-weight: 700;
   color: var(--Very-Dark-Magenta);
 }
 
 .article1 > p {
-  margin: 1em 8em 0 0;
-  font-size: 1.1em;
-  font-weight: 400;
+  margin: 1em 6em 0 0;
+  font-size: 1.2em;
+  font-weight: 500;
   line-height: 1.3;
-  color: var(--Very-Dark-Magenta);
+  color: var(--Dark-Grayish-Magenta);
 }
 
 .article2 {
@@ -127,7 +127,7 @@ main {
 }
 
 .testimonials img {
-  height: 2em;
+  height: 2.5em;
   border-radius: 50%;
   margin-right: 1em;
 }
@@ -141,8 +141,8 @@ main {
 .testimonials p {
   color: var(--White);
   line-height: 1.5;
-  letter-spacing: 0.05em;
-  font-weight: 400;
+  letter-spacing: 0.01em;
+  font-weight: 500;
 }
 
 .testimonials h5 {
